Archive2/b3/bdb0fa3d937cd2/output
main.cpp: In function 'int main()':
main.cpp:7:47: error: use of deleted function 'void set_function(Key&&, Args&& ...) [with Sig = {int}; Key = const char (&)[11]; Args = {int (&)()}]'
     set_function<int>("overloaded", overloaded);
                                               ^
main.cpp:2:6: note: declared here
 void set_function(Key&& key, Args&&... args) = delete;
      ^
