Archive2/b3/bdb0fa3d937cd2/main.cpp
template<typename... Sig, typename Key, typename... Args>
void set_function(Key&& key, Args&&... args) = delete;

int overloaded();

int main() {
    set_function<int>("overloaded", overloaded);
}